manifests/step1_app_deployment.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: homepage
  labels:
    app: homepage
    version: v6
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homepage
      version: v6
  template:
    metadata:
      labels:
        app: homepage
        version: v6
    spec:
      serviceAccountName: tutorial-homepage
      containers:
        - name: homepage
          image: johnlindsay93/istio-tutorial-home:v6
          ports:
          - containerPort: 5000
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 250m
            limits:
              cpu: 500m
---
apiVersion : apps/v1
kind: Deployment
metadata:
  name: service-v5
  labels:
    app: service1
    version: v5
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service1
      version: v5
  template:
    metadata:
      labels:
        app: service1
        version: v5
    spec:
      serviceAccountName: tutorial-service
      containers:
        - name: service1
          image: johnlindsay93/istio-tutorial-service1:v5
          ports:
          - containerPort: 5001
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 250m
            limits:
              cpu: 500m
---
apiVersion : apps/v1
kind: Deployment
metadata:
  name: service-v4
  labels:
    app: service1
    version: v4
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service1
      version: v4
  template:
    metadata:
      labels:
        app: service1
        version: v4
    spec:
      serviceAccountName: tutorial-service
      containers:
        - name: service1
          image: johnlindsay93/istio-tutorial-service1:v4
          ports:
          - containerPort: 5001
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 250m
            limits:
              cpu: 500m
---
apiVersion : apps/v1
kind: Deployment
metadata:
  name: service-v3
  labels:
    app: service1
    version: v3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service1
      version: v3
  template:
    metadata:
      labels:
        app: service1
        version: v3
    spec:
      serviceAccountName: tutorial-service
      containers:
        - name: service1
          image: johnlindsay93/istio-tutorial-service1:v3
          ports:
          - containerPort: 5001
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 250m
            limits:
              cpu: 500m
---
apiVersion: v1
kind: Service
metadata:
    name: homepage
    labels:
      app: homepage
      service: homepage
spec:
    ports:
    - port: 5000
      name: http
    selector:
      app: homepage
---
apiVersion: v1
kind: Service
metadata:
    name: service
    labels:
      app: service1
      service: service1
spec:
    ports:
    - port: 5001
      name: http
    selector:
      app: service1
