manifests/step3_destinationRules.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: homepage
spec:
  host: homepage
  subsets:
  - name: v6
    labels:
      version: v6
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: service1
spec:
  host: service
  subsets:
  - name: v3
    labels:
      version: v3
  - name: v4
    labels:
      version: v4
  - name: v5
    labels:
      version: v5
