manifests/step4_virtual-service-v3.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: homepage
spec:
  hosts:
  - homepage
  http:
  - route:
    - destination:
        host: homepage
        subset: v6
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service1
spec:
  hosts:
  - service
  http:
  - route:
    - destination:
        host: service
        subset: v3
