manifests/step5_virtual-service-v3-v4.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service1
spec:
  hosts:
  - service
  http:
  - route:
    - destination:
        host: service
        subset: v3
      weight: 75
    - destination:
        host: service
        subset: v4
      weight: 25
